# $Id: Makefile.am,v 1.1.10.2 2009-08-22 00:35:57 mvarshney Exp $

include $(top_srcdir)/Makefile.am.common

libnetincludedir = $(includedir)/libnet
 
libnetinclude_HEADERS = libnet-asn1.h \
			libnet-functions.h \
			libnet-headers.h \
			libnet-macros.h \
			libnet-structures.h \
			libnet-types.h
